traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:3: error: ':' expected but ')' found.
def avancerCrois(a):Boolean={
                  ^TraversalZigZag:46: error: identifier expected but '}' found.
}
^